--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,84 @@ body {
   padding: 20px;
 }
 
-.player-controls {
+.player__container {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.player__controls {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 120px;
-  margin-bottom: 28px;
+  margin-right: 30px;
+}
+
+.player__body {
+  display: flex;
+  flex-direction: column;
+  visibility: hidden;
+}
+
+.player__body-main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.player-time {
+  display: flex;
+  gap: 3px;
+  margin-right: 30px;
+}
+
+.music-name {
+  margin-right: 30px;
+}
+
+.volume__container {
+  cursor: pointer;
+  display: flex;
+}
+
+.volume-slider {
+  position: relative;
+  top: 2px;
+  height: 10px;
+  width: 75px;
+  background: white;
+  transition: 0.3s;
+}
+
+.volume-percentage {
+  background: coral;
+  height: 100%;
+  width: 75%;
+}
+
+.volume-icon {
+  position: relative;
+  bottom: 3px;
+  background-image: url(../assets/img/volume.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.timeline {
+  background-color: white;
+  position: relative;
+  cursor: pointer;
+  height: 7px;
+  margin-top: 10px;
+}
+
+.progress-bar {
+  background: coral;
+  width: 0%;
+  height: 100%;
+  transition: 0.25s;
 }
 
 .play-list {
@@ -51,6 +123,7 @@ body {
   opacity: .8;
   cursor: pointer;
   transition: .3s;
+  z-index: 100;
 }
 
 .play-item:hover {
